[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Tower/Scrap Collector/Scrap Collector.gd" type="Script" id=1]
[ext_resource path="res://assets/Towers/Scrap Collector/Scrap Collector.png" type="Texture" id=2]
[ext_resource path="res://src/Tower/Scrap Collector/Gravity Field/Gravity Field.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Towers/General/Tower_Fill.png" type="Texture" id=4]
[ext_resource path="res://assets/Towers/General/Tower_Top.png" type="Texture" id=5]
[ext_resource path="res://assets/Towers/General/Tower_Back.png" type="Texture" id=6]
[ext_resource path="res://assets/Towers/Laser Tower/Laser/white_circle.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 567.0

[sub_resource type="CircleShape2D" id=3]
radius = 56.0

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.582915, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0.518072, 1 ), 0.0, -3.53434, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 96, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 4 )
color_ramp = SubResource( 13 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 56, 84 )

[node name="Scrap Collector" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )
max_health = 20.0

[node name="Healthbar" type="TextureProgress" parent="."]
visible = false
margin_left = -14.0
margin_top = -52.0
margin_right = 14.0
margin_bottom = -26.0
rect_pivot_offset = Vector2( 14, 0 )
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node2D" parent="."]

[node name="Landing_Sound" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -18 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -18 )
shape = SubResource( 1 )

[node name="Exception_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exception_Area"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Gravity_Area" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -128 )
gravity_point = true

[node name="Particles" type="Node2D" parent="."]

[node name="CastingParticles2D2" type="Particles2D" parent="Particles"]
modulate = Color( 0.960784, 0.294118, 1, 1 )
position = Vector2( -10, -18 )
rotation = -3.14159
emitting = false
lifetime = 0.5
visibility_rect = Rect2( 0, -18.722, 29.6756, 38.4841 )
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 8 )

[node name="CastingParticles2D" type="Particles2D" parent="Particles"]
modulate = Color( 0.960784, 0.294118, 1, 1 )
position = Vector2( 10, -18 )
emitting = false
lifetime = 0.5
visibility_rect = Rect2( 0, -18.722, 29.6756, 38.4841 )
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 8 )

[node name="Scrap_Chute" type="Area2D" parent="."]
position = Vector2( 0, -128 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scrap_Chute"]
position = Vector2( 0, 44 )
shape = SubResource( 15 )

[node name="Scrap_Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scrap_Detection"]
shape = SubResource( 3 )

[node name="Upgrades" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Upgrades"]
position = Vector2( 14, 0 )

[node name="Position2D2" type="Position2D" parent="Upgrades"]

[node name="Position2D3" type="Position2D" parent="Upgrades"]
position = Vector2( -14, 0 )

[connection signal="body_entered" from="Exception_Area" to="." method="_on_Exception_Area_body_entered"]
[connection signal="body_exited" from="Exception_Area" to="." method="_on_Exception_Area_body_exited"]
[connection signal="body_entered" from="Scrap_Chute" to="." method="_on_Scrap_Chute_body_entered"]
[connection signal="body_exited" from="Scrap_Chute" to="." method="_on_Scrap_Chute_body_exited"]
[connection signal="body_entered" from="Scrap_Detection" to="." method="_on_scrap_entered"]
